syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "org.ms.user_service.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUidByAddress (GetUidByAddressRequest) returns (GetUidByAddressResponse);
}

message GetUidByAddressRequest {
  string address = 1;
}

message GetUidByAddressResponse {
  int64 uid = 1;
}
